display order confirmation email dynamically and send it

--- a/versions/v0.2/mmbx/content/css/orderConfirmation.css
+++ b/versions/v0.2/mmbx/content/css/orderConfirmation.css
@@ -87,6 +87,7 @@ table {
     width: 100%;
     text-align: center;
     text-transform: capitalize;
+    letter-spacing: 5px;
 }
 
 .head_content-brand a {
