add header files

--- a/versions/v0.2/mmbx/content/css/header.css
+++ b/versions/v0.2/mmbx/content/css/header.css
@@ -1,6 +1,6 @@
 
 
-/*—— UP ——*/
+/*———————————————————————————————— COMMON HEADER DOWN ———————————————————————*/
 
 /*—————————————— COMPUTER ——————————————*/
 
@@ -212,3 +212,7 @@
         width: 35px;
     }
 }
+
+/*———————————————————————————————— COMMON HEADER DOWN ———————————————————————*/
+/*—————————————— COMPUTER ——————————————*/
+/*——————————————- MOBILE ——————————————-*/
