--- a/versions/v0.2/mmbx/content/css/header.css
+++ b/versions/v0.2/mmbx/content/css/header.css
@@ -17,7 +17,8 @@
     .navbar-computer {
         display: block;
         width: 100%;
-        height: 145px;
+        /* height: 145px; */
+        height: var(--body-top-computer);
         padding: 45px;
         color: var(--color-text) !important;
         box-shadow: 0px 12px 20px var(--color-shadow);
@@ -142,7 +143,8 @@
     .navbar-mobile {
         display: block;
         width: 100%;
-        height: 100px;
+        /* height: 100px; */
+        height: var(--body-top-mobile);
         padding: 25px 10px;
         color: var(--color-text) !important;
         box-shadow: 0px 12px 20px var(--color-shadow);
@@ -214,5 +216,47 @@
 }
 
 /*———————————————————————————————— COMMON HEADER DOWN ———————————————————————*/
+.header_landing{
+    border-bottom: var(--color-white) 1px solid;
+}
+.header_content{
+    padding: 0 100px;
+    color: var(--color-white);
+    background-color: var(--color-pink);
+}
+.header_content-brand{
+    display: flex;
+    height: 100%;
+    font-size: var(--big-font-size);
+}
+.header_content-brand span{
+    /* margin: auto 0; */
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
 /*—————————————— COMPUTER ——————————————*/
+@media (min-width: 992px) {
+    .header_landing{
+        position: absolute;
+        top: var(--body-initial-top-computer);
+    }
+    .header_content{
+        height: var(--body-top-computer);
+    }
+    .header_content-brand span{
+        margin: auto 0;
+    }
+}
 /*——————————————- MOBILE ——————————————-*/
+@media (max-width: 991px) {
+    .header_landing{
+        position: absolute;
+        top: var(--body-initial-top-mobile);
+    }
+    .header_content{
+        height: var(--body-top-mobile);
+    }
+    .header_content-brand span{
+        margin: auto;
+    }
+}
