--- a/versions/v0.2/mmbx/content/css/root.css
+++ b/versions/v0.2/mmbx/content/css/root.css
@@ -10,12 +10,15 @@
     --color-link-05: rgba(11, 71, 91, .5);
     --color-label: #C6C6C7;
     --color-white: #ffffff;
+    --color-white-075: rgba(255, 255, 255, .75);
     --color-red: #AF3134;
     --color-green: #23CBA7;
+    --color-green-clear: #6AE3C9;
     --color-green-02: rgba(35, 203, 167, 0.2);
     --color-yellow: #FFD300;
     --color-yellow-07: rgba(255, 211, 0, 0.7);
     --color-blue: #4DA3F5;
+    --color-pink: #F0C7CB;
     /*———————————————————————————————— COLOR UP —————————————————————————————*/
     /*———————————————————————————————— FONT-FAMILY DOWN —————————————————————*/
     --main-font-family: 'Spartan', Verdana, Geneva, sans-serif;
@@ -23,6 +26,7 @@
     --box-font-family: 'Open Sans', sans-serif;
     /*———————————————————————————————— FONT-FAMILY UP ———————————————————————*/
     /*———————————————————————————————— FONT-SIZE DOWN ———————————————————————*/
+    --font-size-2_5em: 2.5em;
     --big-font-size: 2em;
     --font-size-1_7em: 1.7em;
     --font-size-1_6em: 1.6em;
@@ -48,6 +52,7 @@
     --border-float: var(--color-shadow) 1px solid;
     --border-float-radius: 5px;
     --big-border-radius: 20px;
+    /* --border-radius-35: 35px; */
     --border-radius-selcted-element: 10px;
     /*———————————————————————————————— BODER UP —————————————————————————————*/
     /*———————————————————————————————— Z-INDEX DOWN —————————————————————————*/
@@ -55,16 +60,21 @@
     --z-index-body: -5;
     /*———————————————————————————————— Z-INDEX UP ———————————————————————————*/
     /*———————————————————————————————— POSITION DOWN ————————————————————————*/
-    --body-top-computer: 145px;
-    --body-top-mobile: 100px;
-    --body-initial-top-computer: -145px;
-    --body-initial-top-mobile: -100px;
+    /* --body-top-computer: 145px; */
+    --body-top-computer:120px;
+    /* --body-top-mobile: 100px; */
+    --body-top-mobile:70px;
+    /* --body-initial-top-computer: -145px; */
+    --body-initial-top-computer: -120px;
+    /* --body-initial-top-mobile: -100px; */
+    --body-initial-top-mobile: -70px;
     /*———————————————————————————————— POSITION UP ——————————————————————————*/
     /*———————————————————————————————— MARGIN DOWN ——————————————————————————*/
     --cartelement-margin-bottom: 15px;
     --boxproduct-margin-bottom: 5px;
     /*———————————————————————————————— MARGIN UP ————————————————————————————*/
 }
+
 .remove-a-default-att {
     text-decoration: none;
 }
@@ -124,11 +134,13 @@
     font-family: var(--italic-font-family);
     font-style: italic;
 }
+
 .title-first_letter {
     font-family: var(--main-font-family);
     color: var(--color-text);
 }
-.title-first_letter::first-letter{
+
+.title-first_letter::first-letter {
     text-transform: capitalize;
 }
 
@@ -169,4 +181,8 @@ header {
 .fraction-span {
     color: var(--color-text-05);
     font-size: var(--little-font-size);
+}
+
+.capitalize {
+    text-transform: capitalize;
 }
