--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -734,7 +734,7 @@
 .cta-btn {
     width: 100%;
     height: 55px;
-    font-size: var(--font-size-1_6em);
+    /* font-size: var(--font-size-1_6em); */
     text-transform: capitalize;
     background-color: var(--color-green-clear);
     color: var(--color-white);
