--- a/versions/v0.2/mmbx/content/css/root.css
+++ b/versions/v0.2/mmbx/content/css/root.css
@@ -19,6 +19,7 @@
     --color-yellow: #FFD300;
     --color-yellow-07: rgba(255, 211, 0, 0.7);
     --color-blue: #4DA3F5;
+    --color-blue-wave: #458ED3;
     --color-blue-05: rgba(175, 213, 248, .5);
     --color-pink: #F0C7CB;
     /*———————————————————————————————— COLOR UP —————————————————————————————*/
